@@ -6,6 +6,7 @@ import lombok.val;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.StandardOpenOption;
 import java.time.LocalDateTime;
@@ -36,8 +37,8 @@ public class LogFile
     public void write(String logMessage, LocalDateTime now)
     {
         // Reserve the required builder size.
-        // Time length is always 12, together with 2 brackets and one space this will result in 15.
-        val debugMessage = new StringBuilder(15 + logMessage.length());
+        // Time length is always 12, together with 2 brackets, one space and string end this will result in 16.
+        val debugMessage = new StringBuilder(16 + logMessage.length());
         // Add the beginning of the PREFIX
         debugMessage.append('[');
         // Get the current time
@@ -52,7 +53,7 @@ public class LogFile
 
         try {
             // Log the message
-            Files.write(this.backingFile.toPath(), debugMessage.toString().getBytes(), StandardOpenOption.APPEND);
+            Files.writeString(this.backingFile.toPath(), debugMessage.toString(), StandardCharsets.UTF_8, StandardOpenOption.APPEND);
         } catch (final IOException e) {
             AACAdditionPro.getInstance().getLogger().log(Level.SEVERE, "Something went wrong while trying to write to the log file", e);
         }
